--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
+    "pdfjs-dist": "^5.4.54",
     "radix-ui": "^1.4.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -31,7 +32,8 @@
     "react-router-dom": "^7.8.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
