--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "pdfjs-dist": "^5.4.54",
     "radix-ui": "^1.4.2",
     "react": "^19.1.1",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^7.8.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
