--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd frontend; npm ci --legacy-peer-deps; npm run build",
+  "buildCommand": "npm ci --legacy-peer-deps && npm run build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "cd frontend; npm ci --legacy-peer-deps"
+  "installCommand": "npm ci --legacy-peer-deps",
+  "rootDirectory": "frontend"
 }
