--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-    "installCommand": "npm ci --legacy-peer-deps",
-    "buildCommand": "npm ci --legacy-peer-deps && npm run build",
-    "outputDirectory": "dist"
+    "version": 2,
+    "builds": [
+        {
+            "src": "frontend/package.json",
+            "use": "@vercel/static-build",
+            "config": { "distDir": "dist" }
+        }
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "/index.html" }
+    ]
 }
