--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
+        "distDir": "frontend/dist",
         "buildCommand": "npm install --legacy-peer-deps && npm run build"
       }
     }
